Add earnings decision engine — /earnings page with setups
New /earnings page shows top 25 largest-cap companies reporting in the
next 7 days with: options-implied expected move (ATM straddle), beat/miss
history for last 4 quarters, EPS estimate vs last year, and on-demand
AI read. Sort by date, expected move, or market cap.

Backend: EarningsSetup model, getWeeklySetups() with parallel fetch,
/v1/earnings/week endpoint, 30-min cache. Also fixes sequential fetching
in MarketsController and CommoditiesController (newCachedThreadPool).

Homepage CTA card links to the new page.